<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <!-- UserRegister progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnrUserCreate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@android:dimen/notification_large_icon_width"
                android:visibility="visible">

                <com.batsamayi.ndincedetu.EmailAddressView
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.batsamayi.ndincedetu.PasswordView
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.batsamayi.ndincedetu.PasswordConfirmView
                    android:id="@+id/txtPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bttRegister"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:text="@string/action_register"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAlreadyRegistered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/action_already_registered"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrUserModify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@android:dimen/notification_large_icon_width"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/universal_padding"
                    android:text="@string/alert_user_verify"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/universal_padding"
                    android:text="@string/prompt_user_modify"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/txtNameFirst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/label_name_first"
                        android:imeActionLabel="@string/label_name_first"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/txtNameLast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/label_name_last"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/label_name_last"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bttProceed"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:text="@string/action_change_credentials"
                    android:textStyle="bold" />
            </LinearLayout>

            <include
                android:id="@+id/lnrVerifierForm"
                layout="@layout/fragment_verifier"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>